--- a/property.html
+++ b/property.html
@@ -24,38 +24,80 @@ animatedcollapse.ontoggle=function($, divobj, state){ //fires each time a DIV is
 }
 animatedcollapse.init()
 </script>
-  
+
+<script src="js/tabcontent.js" type="text/javascript"></script>
+<link href="style/tabcontent.css" rel="stylesheet" type="text/css" />  
   
 </head>
 
 <body class="innerpage">
 <!-- Header Starts -->
 <header>
-<div id="header"><div>
-
-  <a href="index.html"><img src="images/jibenet.png" alt="Jibenet" border="0" style="float:left;"></a>
-<div style="width:500px; float:left; padding-left:1%; border-left:1px solid #aaa; margin-left:10px;">
-<form action="" method="post">
-  <div style="width:90%; float:left; height:19px; margin-left:20px;"><a href="#"><img src="images/escritoria-inner.png" alt="escritoria"></a><a href="#"><img src="images/loja-inner.png" alt="escritoria"></a></div>
-  <div style="width:392px; float:left; background-image:url(images/searchbg-inner.png); background-repeat:no-repeat; height:26px; padding:4px;">
-  <input name="search" type="button" value="" class="searchbtn-inner"><input name="search" type="text" placeholder="Digite Um Bairro" style="padding:2px 4px; width:88%; margin-top:2px; border:0px; background:none;">  </div>
-
-<div class="ddmenu-inner" style="width:88px; float:left; margin-left:4px;">
-  <select name="jumpMenu" id="jumpMenu" onChange="MM_jumpMenu('parent',this,0)" >
-        <option>Alugar</option>
-        <option>Option 1</option>
-         <option>Option 1</option>
-     </select>
- </div>
-
-
-</form>
-
+<div id="header">
+	<div class="header">
+        <div class="logo"> <a href="index.html"><img src="images/jibenet.png" width="175" height="64"></a>
+        </div>
+        <div class="header-middle">
+            <div>
+            <ul class="tabs" persist="true">
+                <li><a href="#" rel="view1">Escritoria</a></li>
+                <li><a href="#" rel="view2">Loja</a></li>
+            </ul>
+         <div class="tabcontents">
+            <div id="view1" class="tabcontent">
+             <form action="" method="post">
+              <div style="width:392px; float:left; background-image:url(images/searchbg-inner.png); background-repeat:no-repeat; height:26px; padding:4px;">
+              <input name="search" type="button" value="" class="searchbtn-inner"><input name="search" type="text" placeholder="Digite Um Bairro" style="padding:2px 4px; width:88%; margin-top:2px; border:0px; background:none;">  </div>
+            
+            <div class="ddmenu-inner" style="width:88px; float:left; margin-left:4px;">
+              <select name="jumpMenu" id="jumpMenu" onChange="MM_jumpMenu('parent',this,0)" >
+                    <option>Alugar</option>
+                    <option>Option 1</option>
+                     <option>Option 1</option>
+                 </select>
+             </div>
+           </form>
+            </div>
+            <div id="view2" class="tabcontent">
+            <form action="" method="post">
+              <div style="width:392px; float:left; background-image:url(images/searchbg-inner.png); background-repeat:no-repeat; height:26px; padding:4px;">
+              <input name="search" type="button" value="" class="searchbtn-inner"><input name="search" type="text" placeholder="Digite Um Bairro" style="padding:2px 4px; width:88%; margin-top:2px; border:0px; background:none;">  </div>
+            
+            <div class="ddmenu-inner" style="width:88px; float:left; margin-left:4px;">
+              <select name="jumpMenu" id="jumpMenu" onChange="MM_jumpMenu('parent',this,0)" >
+                    <option>Alugar</option>
+                    <option>Option 1</option>
+                     <option>Option 1</option>
+                 </select>
+             </div>
+           </form>                                    
+            </div>
+       </div>
+      </div>
+        </div>
+       <div class="right">
+        <span>
+            <select name="select" id="select">
+              <option value="Entre">Entre</option>
+              <option value="Entre">Option 1</option>
+              <option value="Entre">Option 2</option>
+              <option value="Entre">Option 3</option>
+            </select>
+        </span>
+        <span>
+            <select name="select" id="select">
+              <option value="Entre">Ajudar</option>
+              <option value="Entre">Option 1</option>
+              <option value="Entre">Option 2</option>
+              <option value="Entre">Option 3</option>
+            </select>
+        </span>
+        <div class="green-tab">
+            <p><a href="">Listar Sua Properiedade</a></p>
+        </div>
+        </div>
+	</div>
 </div>
-
-
-<div class="right"><a href="#"><img src="images/entre.png" alt="Entre"></a> <a href="#"><img src="images/ajudar.png" alt="Ajudar"></a> <a href="form.html"><img src="images/listar.png" alt="Listar" border="0"></a></div>
-</div></div>
 </header>
 <!-- Header Ends -->
 
@@ -232,7 +274,7 @@ Price</p>
       $('#carousel').flexslider({
         animation: "slide",
         controlNav: false,
-        animationLoop: false,
+        animationLoop: true,
         slideshow: false,
         itemWidth: 210,
         itemMargin: 5,
@@ -242,7 +284,7 @@ Price</p>
       $('#slider').flexslider({
         animation: "slide",
         controlNav: false,
-        animationLoop: false,
+        animationLoop: true,
         slideshow: false,
         sync: "#carousel",
         start: function(slider){
